k8s/perf2/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api
  namespace: perf2
  labels:
    name: api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: perf2-api
      labels:
        name: api
    spec:
      nodeSelector:
        node-role.kubernetes.io/qa: ""
      imagePullSecrets:
        - name: registry
      dnsPolicy: Default
      restartPolicy: Always
      containers:
        - args:
            - web
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/rm
                  - -f
                  - /app/public/commit.txt
                  - ;
                  - sleep
                  - "5"
                  - ;
                  - /usr/sbin/apachectl
                  - -k
                  - graceful-stop
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: perf2-api.razorpay.in
              path: /commit.txt
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
          name: api-web
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: perf2-api.razorpay.in
              path: /commit.txt
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 120
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app/storage/logs/
              name: trace
            - mountPath: /var/log/apache/
              name: apache
        - args:
            - sqs
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-main
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - api-gen-live
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-gen-live
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - api-gen-test
            - "20"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-gen-test
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - webhooks-live
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-webhooks-live
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - webhooks-test
            - "20"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-webhooks-test
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - webhooks-failure
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-webhooks-failure
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - invoice-emails
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-invoice-email
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - invoice-reports
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-invoice-reports
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - es-sync
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-es-sync
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - emails
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-emails
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - subscription-charge
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-subscription-charge
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - sqs_multi_default
            - batch
            - "10"
          image: razorpay/api:302842
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/php
                  - artisan
                  - down
          name: api-sqs-batch
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      volumes:
        - hostPath:
            path: /var/log/fluentd/splunk/api/trace
            type: ""
          name: trace
        - hostPath:
            path: /var/log/fluentd/splunk/api/apache
            type: ""
          name: apache
